--- a/Billiards.UI/Windows/InputDialog.xaml
+++ b/Billiards.UI/Windows/InputDialog.xaml
@@ -1,21 +1,58 @@
 <Window x:Class="Billiards.UI.Windows.InputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Input" Height="150" Width="350"
+        Title="Input" Height="180" Width="400"
         WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize">
-    <Grid Margin="15">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#E8F5E9" Offset="0"/>
+                <GradientStop Color="#C8E6C9" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        
+        <Border CornerRadius="8" 
+                Background="{StaticResource SurfaceColor}" 
+                BorderBrush="{StaticResource PrimaryColor}" 
+                BorderThickness="2"
+                Margin="20"
+                Padding="20">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-        <TextBlock x:Name="txtQuestion" Grid.Row="0" Margin="0,0,0,10"/>
-        <TextBox x:Name="txtAnswer" Grid.Row="1" Margin="0,0,0,15" KeyDown="txtAnswer_KeyDown"/>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="OK" Width="75" Height="25" Margin="0,0,10,0" Click="btnOk_Click" IsDefault="True"/>
-            <Button Content="Cancel" Width="75" Height="25" Click="btnCancel_Click" IsCancel="True"/>
-        </StackPanel>
+                <TextBlock x:Name="txtQuestion" 
+                           Grid.Row="0" 
+                           FontSize="14"
+                           FontWeight="SemiBold"
+                           Foreground="{StaticResource TextColor}"
+                           Margin="0,0,0,15"/>
+                <TextBox x:Name="txtAnswer" 
+                         Grid.Row="1" 
+                         FontSize="14"
+                         Margin="0,0,0,20" 
+                         KeyDown="txtAnswer_KeyDown"/>
+                <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Button Content="OK" 
+                            Width="90" 
+                            Height="35" 
+                            Margin="0,0,10,0" 
+                            Click="btnOk_Click" 
+                            IsDefault="True"
+                            FontSize="14"/>
+                    <Button Content="Cancel" 
+                            Width="90" 
+                            Height="35" 
+                            Click="btnCancel_Click" 
+                            IsCancel="True"
+                            Style="{StaticResource SecondaryButton}"
+                            FontSize="14"/>
+                </StackPanel>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
